RESOLVED FIXED28320
SharedWorkers need to forward exceptions to parent documents
https://bugs.webkit.org/show_bug.cgi?id=28320
Summary SharedWorkers need to forward exceptions to parent documents
Andrew Wilson
Reported 2009-08-14 14:51:31 PDT
Currently, exceptions/parse errors in SharedWorker script are silently swallowed. We need to forward these exceptions to all parent documents so they can be logged/displayed to the user.
Attachments
proposed patch (9.70 KB, patch)
2009-08-14 15:04 PDT, Andrew Wilson
no flags
Andrew Wilson
Comment 1 2009-08-14 15:04:52 PDT
Created attachment 34874 [details] proposed patch
David Levin
Comment 2 2009-08-18 12:12:06 PDT
Comment on attachment 34874 [details] proposed patch It looks good except for one thing: Consider creating a fast/workers/resources/TEMPLATE and then run WebKitTools/Scripts/make-script-test-wrappers to generate shared-worker-exception.html-disabled (You'll likely need to add some exceptions in that script as well.) This may not be the right path so if it turns out to be a lot of work speak up.
Andrew Wilson
Comment 3 2009-08-18 13:45:18 PDT
Looks like a bunch of work for little/no gain. make-script-test-wrappers doesn't keep <xxxx>.html-disabled files up-to-date, and doesn't currently support generating multiple HTML files from a single template (which we need to do to support both workers and shared-workers).
Eric Seidel (no email)
Comment 4 2009-08-18 14:12:19 PDT
Comment on attachment 34874 [details] proposed patch Rejecting patch 34874 from commit-queue. This patch will require manual commit. Failed to run "['git', 'svn', 'rebase']" exit_code: 1 cwd: None
Eric Seidel (no email)
Comment 5 2009-08-18 14:25:12 PDT
Eric Seidel (no email)
Comment 6 2009-08-18 15:16:04 PDT
Comment on attachment 34874 [details] proposed patch Clearing flags on attachment: 34874 Committed r47460: <http://trac.webkit.org/changeset/47460>
Eric Seidel (no email)
Comment 7 2009-08-18 15:16:07 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.