2009-08-18  Drew Wilson  <atwilson@google.com>

Reviewed by David Levin.

        SharedWorkers need to forward exceptions to parent documents
        https://bugs.webkit.org/show_bug.cgi?id=28320

        Wrote test to generate exception and make sure it gets logged to the console.
        Started switching over to using the same test utilities that the tests under fast/js use.

        * fast/workers/resources/shared-worker-common.js:
        (generateError):
        (handleMessage):
        * fast/workers/resources/shared-worker-exception.js: Added.
        (worker.onmessage):
        (done):
        * fast/workers/shared-worker-exception-expected.txt: Added.
        * fast/workers/shared-worker-exception.html-disabled: Added.

2009-08-18  Drew Wilson  <atwilson@google.com>

        Reviewed by David Levin.

        SharedWorkers need to forward exceptions to parent documents
        https://bugs.webkit.org/show_bug.cgi?id=28320

        Changed SharedWorkerProxy to have individual mutexes (so workers can interact with their parent documents without contention).

        Updated SharedWorkerProxy to forward exceptions/console messages to all parent documents.

        * bindings/js/JSSharedWorkerConstructor.cpp:
        Cleaned up bitrot - added missing include.
        * workers/DefaultSharedWorkerRepository.cpp:
        (WebCore::postExceptionTask):
        Callback used to deliver exceptions to a document.
        (WebCore::SharedWorkerProxy::postExceptionToWorkerObject):
        Forwards exceptions to all parent documents for presentation to the user.
        (WebCore::postConsoleMessageTask):
        (WebCore::SharedWorkerProxy::postConsoleMessageToWorkerObject):
        Forwards console messages to all parent documents for presentation to the user.
        (WebCore::SharedWorkerProxy::addToWorkerDocuments):
        Grabs the mutex before accessing workerDocuments.
        (WebCore::SharedWorkerProxy::documentDetached):
        Grabs the mutex before accessing workerDocuments.

Canonical link: https://commits.webkit.org/39054@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47460 268f45cc-cd09-0410-ab3c-d52691b4dbfc